# whisper_demo

./: README.md  pyproject.toml
src/: demo_openai.ipynb  demo_transformers.ipynb
